tests/golden/cases/parse_error_ascii_block.txt
tests/golden/cases/parse_error_ascii_block.suay:4:1: syntax error: Expected an expression (got EOF)

^
